--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -49,4 +49,11 @@
 
     </LinearLayout>
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:id="@+id/pb"
+        android:indeterminateTint="@color/black"/>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
