--- a/app/src/main/res/layout/checkout_layout.xml
+++ b/app/src/main/res/layout/checkout_layout.xml
@@ -1,112 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_margin="10dp"
-    app:cardBackgroundColor="@color/black"
-    app:cardCornerRadius="20dp">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="2dp"
-        app:cardBackgroundColor="@color/white"
+        app:cardBackgroundColor="@color/black"
         app:cardCornerRadius="20dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center"
-            android:minWidth="350dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="20dp"
-                android:background="@android:color/holo_orange_light"
-                android:fontFamily="serif"
-                android:gravity="center"
-                android:padding="10dp"
-                android:text="Ready to checkout"
-                android:textColor="@color/black"
-                android:textStyle="bold" />
+            android:layout_margin="2dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="20dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:minWidth="350dp"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
+                    android:layout_margin="20dp"
+                    android:background="@android:color/holo_orange_light"
                     android:fontFamily="serif"
                     android:gravity="center"
-                    android:text="@string/total"
-                    android:textColor="@android:color/holo_orange_dark"
-                    android:textSize="20sp"
+                    android:padding="10dp"
+                    android:text="Ready to checkout"
+                    android:textColor="@color/black"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/total"
+                <LinearLayout
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:fontFamily="serif"
+                        android:gravity="center"
+                        android:text="@string/total"
+                        android:textColor="@android:color/holo_orange_dark"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/total"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:fontFamily="serif"
+                        android:gravity="center"
+                        android:text="@string/hy"
+                        android:textColor="@android:color/holo_green_light"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/orderButton"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:fontFamily="serif"
-                    android:gravity="center"
-                    android:text="@string/hy"
-                    android:textColor="@android:color/holo_green_light"
-                    android:textSize="20sp"
+                    android:background="@drawable/login_bg_button_white"
+                    android:backgroundTint="@android:color/holo_orange_light"
+                    android:drawableEnd="@drawable/ic_cash"
+                    android:drawablePadding="10dp"
+                    android:elevation="12dp"
+                    android:padding="15dp"
+                    android:text="@string/order"
+                    android:textColor="@color/white"
                     android:textStyle="bold" />
+
+                <ImageButton
+                    android:id="@+id/cancel_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="5dp"
+                    android:background="@android:color/transparent"
+                    android:drawableEnd="@drawable/ic_cash"
+                    android:drawablePadding="10dp"
+                    android:elevation="12dp"
+                    android:padding="15dp"
+                    android:src="@drawable/x"
+                    android:text="@string/order"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
             </LinearLayout>
 
-            <Button
-                android:id="@+id/orderButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="5dp"
-                android:background="@drawable/login_bg_button_white"
-                android:backgroundTint="@android:color/holo_orange_light"
-                android:drawableEnd="@drawable/ic_cash"
-                android:drawablePadding="10dp"
-                android:elevation="12dp"
-                android:padding="15dp"
-                android:text="@string/order"
-                android:textColor="@color/white"
-                android:textStyle="bold" />
-
-            <ImageButton
-                android:id="@+id/cancel_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="5dp"
-                android:background="@android:color/transparent"
-                android:drawableEnd="@drawable/ic_cash"
-                android:drawablePadding="10dp"
-                android:elevation="12dp"
-                android:padding="15dp"
-                android:src="@drawable/x"
-                android:text="@string/order"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                tools:ignore="SpeakableTextPresentCheck" />
-
-        </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
     </androidx.cardview.widget.CardView>
 
-</androidx.cardview.widget.CardView>
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/pb"
+        android:layout_gravity="center"
+        android:indeterminateTint="@color/black"
+        android:elevation="15dp"/>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
