--- a/app/src/main/res/layout/activity_job_progress.xml
+++ b/app/src/main/res/layout/activity_job_progress.xml
@@ -17,21 +17,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:background="@android:color/holo_green_light"
+            app:title="Job Progress"
+            android:background="@android:color/black"
             app:navigationIcon="@drawable/ic_back"
-            app:subtitleTextColor="@color/semiGrey"
+            app:subtitleTextColor="@color/semiWhite"
             app:titleTextColor="@color/white" />
 
-        <com.google.android.gms.maps.MapView
-            android:id="@+id/mapView"
+        <me.relex.circleindicator.CircleIndicator3
+            android:layout_margin="5dp"
+            android:id="@+id/indicator"
+            android:minHeight="50dp"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:layout_gravity="center"
-            android:apiKey="@string/google_maps_key"
-            android:background="@color/semiGrey"
-            android:minWidth="350dp"
-            android:minHeight="350dp"
-            android:nestedScrollingEnabled="true" />
+            android:layout_height="wrap_content"
+            app:ci_drawable_unselected="@drawable/purple_dot_big"
+            app:ci_drawable="@drawable/black_dot"
+            android:layout_gravity="center" />
+
 
         <androidx.viewpager2.widget.ViewPager2
             android:layout_weight="1"
@@ -42,18 +43,14 @@
             android:isScrollContainer="true"
             android:padding="10dp" />
 
-        <Button
-            android:id="@+id/proceed"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="15dp"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:backgroundTint="@android:color/holo_green_light"
-            android:background="@drawable/login_bg_button"
-            android:text="@string/proceed" />
 
     </LinearLayout>
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:indeterminateTint="@color/black"
+        android:id="@+id/pb"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
