--- a/app/src/main/res/layout/purchase_item.xml
+++ b/app/src/main/res/layout/purchase_item.xml
@@ -31,7 +31,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center_vertical"
-                    android:text="Buyer : "
+                    android:text="Beneficiary : "
                     android:textStyle="bold" />
 
                 <TextView
