--- a/app/src/main/res/menu/admin_drawer.xml
+++ b/app/src/main/res/menu/admin_drawer.xml
@@ -4,5 +4,6 @@
     <group android:id="@+id/admin" >
     <item android:id="@+id/products" android:title="@string/products" />
     <item android:id="@+id/users" android:title="@string/users" />
+<!--    <item android:id="@+id/stats" android:title="@string/stats" />-->
     </group>
 </menu>
