--- a/app/src/main/res/menu/transporter_drawer.xml
+++ b/app/src/main/res/menu/transporter_drawer.xml
@@ -4,5 +4,7 @@
     <group android:id="@+id/transporter" >
     <item android:id="@+id/jobs" android:title="@string/jobs" />
     <item android:id="@+id/donations" android:title="@string/donation_job" />
+    <item android:id="@+id/purchaseStats" android:title="@string/purchase_stats" />
+    <item android:id="@+id/donationsStats" android:title="@string/donation_stats" />
     </group>
 </menu>
