--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -10,13 +10,32 @@
         android:orientation="vertical">
 
         <ImageView
+            android:layout_weight="1"
             android:layout_gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+
             android:src="@mipmap/food_connect_logo_foreground"
             android:scaleType="fitCenter"/>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:layout_marginBottom="120dp"
+                android:padding="25dp"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:fontFamily="sans-serif"
+                android:text="A Food Distribution and Tracking System that aims at solving the 2nd SDG"/>
+
+
+
     </LinearLayout>
+
+
 
     <ProgressBar
         android:id="@+id/splashScreenPb"
